# infotecs_test

./: .gitignore  CMakeLists.txt  README.md
include/app/include/: app.hpp
include/app/src/: app.cpp  main.cpp
include/loglib/: ilogger.hpp  log_level.hpp  logger.hpp
src/: logger.cpp  main.cpp
tests/: test_logger.cpp
